--- a/configuration/api-internal/controllers.yml
+++ b/configuration/api-internal/controllers.yml
@@ -7,6 +7,7 @@ services:
             - '@pools'
             - '@permissions'
             - '@api.response_formatter'
+            - '@api.normalizer'
 
     api_internal.settings.favorite_applications.add:
         class: 'Hal\UI\Controllers\User\FavoriteApplications\AddFavoriteApplicationHandler'
