--- a/configuration/api-writes/controllers.yml
+++ b/configuration/api-writes/controllers.yml
@@ -7,6 +7,7 @@ services:
             - '@build.start.validator'
             - '@push.start.validator'
             - '@api.response_formatter'
+            - '@api_normalizer.build'
             - '@problem.renderer'
 
     deploy.api:
