Use full URLs in api hypermedia links

--- a/configuration/api/services.yml
+++ b/configuration/api/services.yml
@@ -64,4 +64,4 @@ services:
 
     api_normalizer.hyperlink:
         class: 'Hal\UI\API\Normalizer\HyperlinkNormalizer'
-        arguments: ['@uri']
+        arguments: ['@uri', '@request']
