--- a/configuration/ui/controllers.yml
+++ b/configuration/ui/controllers.yml
@@ -94,12 +94,12 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['help/help.twig']]]
 
-    help.deployment.page:
+    help.deployment_scripting.page:
         parent: 'static.controller'
-        arguments: ['@help.deployment.twig']
-    help.deployment.twig:
+        arguments: ['@help.deployment_scripting.twig']
+    help.deployment_scripting.twig:
         parent: 'twig.template'
-        calls: [['setTemplate', ['help/deployment.twig']]]
+        calls: [['setTemplate', ['help/deployment-scripting.twig']]]
 
     help.application_setup.page:
         parent: 'static.controller'
