--- a/configuration/ui/routes.yml
+++ b/configuration/ui/routes.yml
@@ -185,6 +185,11 @@ parameters:
                     route: '/remove'
                     stack: ['middleware.is_owner', 'middleware.removal_confirmation.application', 'application.remove.handler']
 
+                application.permission.add:
+                    method: ['GET', 'POST']
+                    route: '/add-permissions'
+                    stack: ['middleware.is_owner', 'application.permission_add.page']
+
                 # are these application routes or build/push routes?
                 # It's nice to be able to use route groups to nest common url prefixes.
 
