--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /vendor/
 
 # compiled configuration
-/configuration/config.env.yml
+/config/.env
 /src/CachedContainer.php
 
 # deployment caches
@@ -21,5 +21,5 @@
 /.twig/
 
 # secrets
-/configuration/hal.encrypter.secret
-/configuration/kraken.encrypter.secret
+/config/hal.encrypter.secret
+/config/kraken.encrypter.secret
