--- a/composer.json
+++ b/composer.json
@@ -18,45 +18,46 @@
     "require": {
         "php-64bit": "~7.1",
 
-        "ext-curl": "*",
-        "ext-ldap": "*",
-        "ext-libsodium": "*",
-        "ext-mbstring": "*",
-        "ext-openssl": "*",
-        "ext-pdo": "*",
-        "ext-pdo_mysql": "*",
-        "ext-pdo_sqlite": "*",
-        "ext-xmlwriter": "*",
-        "doctrine/orm": "~2.5.6",
-        "guzzlehttp/psr7": "~1.3",
-        "guzzlehttp/guzzle": "6.*",
+        "ext-curl":           "*",
+        "ext-ldap":           "*",
+        "ext-libsodium":      "*",
+        "ext-mbstring":       "*",
+        "ext-openssl":        "*",
+        "ext-pdo":            "*",
+        "ext-pdo_mysql":      "*",
+        "ext-pdo_sqlite":     "*",
+        "ext-xmlwriter":      "*",
+        "doctrine/orm":             "~2.5.6",
+        "guzzlehttp/psr7":          "~1.3",
+        "guzzlehttp/guzzle":        "6.*",
+        "knplabs/github-api":       "~2.0.1",
         "php-http/guzzle6-adapter": "~1.1.0",
-        "knplabs/github-api": "~2.0.1",
-        "paragonie/random_compat": "~1.1",
-        "predis/predis": "~1.0",
-        "psr/log": "*",
+        "predis/predis":            "~1.0",
+        "psr/log":                  "*",
 
-        "ql/hal-core":          "2.10.0",
+        "ql/hal-core":              "2.10.0",
 
-        "ql/mcp-cache":         "~3.0.0",
-        "ql/mcp-common":        "~1.0",
-        "ql/mcp-logger":        "~3.0.0",
-        "ql/mcp-panthor":       "~3.1.0",
+        "ql/mcp-cache":             "~3.0.0",
+        "ql/mcp-common":            "~1.0",
+        "ql/mcp-logger":            "~3.0.0",
+        "ql/mcp-panthor":           "~3.1.0",
 
-        "slim/slim": "~3.7",
+        "slim/slim":                "~3.7",
 
-        "symfony/config":               "~3.2",
-        "symfony/debug":                "~3.2",
-        "symfony/dependency-injection": "~3.2",
-        "symfony/finder":               "~3.2",
-        "symfony/ldap":                 "~3.2",
-        "symfony/options-resolver":     "~3.2",
-        "symfony/proxy-manager-bridge": "~3.2",
-        "symfony/yaml":                 "~3.2",
+        "symfony/config":               "~3.3",
+        "symfony/debug":                "~3.3",
+        "symfony/dependency-injection": "~3.3",
+        "symfony/dotenv":               "~3.3",
+        "symfony/finder":               "~3.3",
+        "symfony/ldap":                 "~3.3",
+        "symfony/options-resolver":     "~3.3",
+        "symfony/proxy-manager-bridge": "~3.3",
+        "symfony/yaml":                 "~3.3",
 
-        "twig/twig": "~2.0"
+        "twig/twig": "~2.4"
     },
     "require-dev": {
-        "symfony/var-dumper":           "~3.2"
+        "symfony/process":              "~3.3",
+        "symfony/var-dumper":           "~3.3"
     }
 }
