Clean various consistency issues with new config

--- a/config/.env.dev.dist
+++ b/config/.env.dev.dist
@@ -4,6 +4,7 @@ HAL_ROOT="$(cd .. && pwd)"
 HAL_DEBUG_ON='0'
 HAL_TIMEZONE='America/Detroit'
 HAL_APPLICATION_ID='200947'
+HAL_BASEURL='http://hal.local'
 
 # hal core
 #HAL_DB_USER=''
@@ -51,7 +52,7 @@ HAL_LDAP_BASE_DN='dc=hal,dc=corp'
 
 # cache
 HAL_REDIS_SERVER='localhost:6379'
-HAL_REDIS_PREFIX='hal_dev'
+HAL_REDIS_PREFIX="hal_${ENVIRONMENT}"
 
 # (memory, redis)
 HAL_CACHE_API='memory'
