--- a/config/.env.prod.dist
+++ b/config/.env.prod.dist
@@ -4,6 +4,7 @@ HAL_ROOT="../"
 HAL_DEBUG_ON='0'
 HAL_TIMEZONE='America/Detroit'
 HAL_APPLICATION_ID='200947'
+HAL_BASEURL='https://halprod.example.com'
 
 # hal core
 #HAL_DB_USER=''
@@ -46,7 +47,7 @@ HAL_LDAP_BASE_DN='dc=hal,dc=corp'
 
 # cache
 HAL_REDIS_SERVER='prodelasticache.example.com:6379'
-HAL_REDIS_PREFIX='hal'
+HAL_REDIS_PREFIX="hal_${ENVIRONMENT}"
 
 # (memory, redis)
 HAL_CACHE_API='redis'
