adding ability to set debug errors on via .env file

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -39,6 +39,7 @@ parameters:
     ############################################################################
     # panthor
     ############################################################################
+    debug: '%env(HAL_DEBUG_ON)%'
     routes.cache_disabled: '%env(HAL_ROUTES_DISABLE_CACHE_ON)%'
     global_middleware:
         - 'slim.global_middleware.logger'
