--- a/package.json
+++ b/package.json
@@ -4,52 +4,48 @@
     "license": "SEE LICENSE IN LICENSE",
 
     "scripts": {
-        "deploy": "gulp build --deploy",
-        "build": "gulp build",
-        "watch": "gulp watch",
-        "js": "gulp js",
-        "css": "gulp css"
+        "deploy": "node_modules/.bin/webpack -p",
+        "build": "node_modules/.bin/webpack",
+        "watch": "node_modules/.bin/webpack --watch"
     },
 
     "dependencies": {
-        "gulp": "~3.9.0",
-        "webpack": "~1.12.2",
+        "webpack": "~3.6.0",
 
-        "del": "~2.0.2",
-        "gulp-autoprefixer": "~2.0",
-        "gulp-eslint": "~1.1",
-        "gulp-plumber": "~1.0",
-        "gulp-sass": "~2.1",
-        "gulp-uglify": "~1.4",
+        "nunjucks-loader": "~2.4.8",
+        "expose-loader": "0.7.3",
+        "extract-text-webpack-plugin": "^3.0.1",
+        "sass-loader": "~6.0.6",
+        "style-loader": "^0.19.0",
+        "css-loader": "^0.28.7",
+        "eslint-loader": "^1.9.0",
 
-        "run-sequence": "~1.1",
-        "exports-loader": "~0.6.2",
-        "nunjucks-loader": "~2.2",
-
-        "babel-polyfill": "~6.5",
-        "babel-loader": "~6.2",
-        "babel-core": "~6.3",
-        "babel-preset-es2015": "~6.3",
-        "babel-preset-react": "~6.3",
-        "babel-eslint": "~4.1",
+        "babel-core": "~6.17",
+        "babel-preset-env": "~1.6.0",
+        "babel-loader": "~7.1.2",
+        "babel-preset-react": "~6.24.1",
+        "babel-eslint": "^8.0.1",
 
         "react": "~0.14",
         "react-dom": "~0.14",
         "eslint-plugin-react": "~3.13",
 
-        "ansi_up": "~1.3",
-        "durationjs": "~1.1",
-        "favico.js": "~0.3",
-        "fuse.js": "~1.3",
-        "hint.css": "~2.4",
-        "jquery": "2.1",
-        "nunjucks": "~2.2",
-        "sugar-date": "~1.5",
-        "svg4everybody": "~2.0",
-        "tablesaw": "~2.0.2",
-        "typed.js": "1.1.1",
+        "eslint": "^4.8.0",
+
+        "ansi_up": "~2.0.2",
+        "durationjs": "~1.1.1",
+        "favico.js": "~0.3.10",
+        "fuse.js": "~3.1.0",
+        "hint.css": "~2.5.0",
+        "jquery": "3.2.1",
+        "nunjucks": "~3.0.1",
+        "sugar-date": "~2.0.4",
+        "svg4everybody": "~2.1",
+        "tablesaw": "~3.0.3",
+        "typed.js": "2.0.6",
         "xss-filters": "1.2.7",
 
+        "node-sass": "4.5.3",
         "breakpoint-sass": "~2.6",
         "modularscale-sass": "~2.1",
         "compass-mixins": "~0.12",
