--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
 
         "ext-curl":           "*",
         "ext-ldap":           "*",
-        "ext-libsodium":      "*",
         "ext-mbstring":       "*",
         "ext-openssl":        "*",
         "ext-pdo":            "*",
@@ -58,6 +57,13 @@
     },
     "require-dev": {
         "symfony/process":              "~3.3",
-        "symfony/var-dumper":           "~3.3"
+        "symfony/var-dumper":           "~3.3",
+        "overtrue/phplint":             "~0.2",
+        "squizlabs/php_codesniffer":    "~3.0"
+    },
+
+    "suggests": {
+        "ext-libsodium": "~1.0",
+        "ext-sodium": "~2.0"
     }
 }
