Reset admin email

--- a/config/.env.dev.dist
+++ b/config/.env.dev.dist
@@ -5,6 +5,7 @@ HAL_DEBUG_ON='0'
 HAL_TIMEZONE='America/Detroit'
 HAL_APPLICATION_ID='200947'
 HAL_BASEURL='http://hal.local'
+HAL_ADMIN_EMAIL="admin@hal.computer"
 
 # hal core
 #HAL_DB_USER=''
